# nest-soc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml
modelica/: nest.mo
nest/: __init__.py  boundary.py  cell.py  constants.py  degradation.py  eis.py  layers.py  properties.py
nest/examples/: durability.py  eis.py  fuel_cell_rev.py  iv_curve.py  iv_curve_ce.py  iv_curve_co2.py
nest/examples/data/: 700C_75FU_40AIR.csv  750C_60CO_100AIR.csv  754C_10H2_40H2O_50CO2.csv  757C_50H2_100O2_EIS.csv  858C_50H2_100O2.csv
nest/examples/tutorials/: 0_installation.ipynb  1_basics.ipynb  2_degradation.ipynb  3_eis.ipynb
nest/tests/: test_imports.py
python/: ivCurve.py  iv_curve.py  main.py
python/data/: 858C_50H2_100O2.csv
python/nest/: __init__.py  cell.py  idealGas.py  ideal_gas.py  layers.py  problem.py
python/nest/examples/: iv_curve.py
tests/: test_imports.py  test_properties.py
