[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "necst"
version = "0.1.0"
description = "Development code for the NEST (Next-gen electrochemical system tools) project"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NEST Team" }]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7", "pandas>=2.1"]

[tool.setuptools.packages.find]
where = ["python"]
