[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-soc"
version = "0.1"
description = "Modeling package for solid oxide cells as part of the NEST (Next-gen electrochemical system tools) project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rafael Nogueira Nakashima", email = "rafnn@dtu.dk" },
    { name = "Javid Beyrami", email = "jabey@dtu.dk"}]
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7", "pandas>=2.1"]

[project.optional-dependencies]
dev = ["build >= 1.3", "pytest>=7.4", "ruff>=0.6"]